# 02_habr_decomposing_normalization

./: .gitignore  Makefile  README.md
benches/: Cargo.toml  README.md
benches/benches/: icu.rs  my.rs  smaller.rs  u32.rs
benches/benches/group/: mod.rs
benches/src/: main.rs
data/: nfd.rs.txt  nfd.stats.txt  nfd.txt  nfkd.rs.txt  nfkd.stats.txt  nfkd.txt
decomposing/: README.md
decomposing/0_basic/: Cargo.toml
decomposing/0_basic/src/: data.rs  lib.rs  macros.rs
decomposing/0_basic/src/decomposition/: hangul.rs  mod.rs
decomposing/1_base/: Cargo.toml
decomposing/1_base/src/: lib.rs
decomposing/1_optimized/: Cargo.toml
decomposing/1_optimized/src/: codepoint.rs  data.rs  hangul.rs  lib.rs  macros.rs
decomposing/1_optimized/src/decomposition/: hangul.rs  mod.rs
decomposing/2_opt/: Cargo.toml
decomposing/2_opt/src/: lib.rs
decomposing/2_smaller_size/: Cargo.toml
decomposing/2_smaller_size/src/: lib.rs
decomposing/2_smaller_size/src/decomposition/: mod.rs
decomposing/2_u32/src/: codepoint.rs  lib.rs
decomposing/2_u32/src/decomposition/: hangul.rs  mod.rs
decomposing/3_codepoints/: Cargo.toml
decomposing/3_codepoints/src/: codepoint.rs  data.rs  hangul.rs  lib.rs
decomposing/src/: data.rs  hangul.rs  lib.rs
prepare/: Cargo.toml  README.md  blocks.txt
prepare/src/encode/: mod.rs
prepare/src/output/: mod.rs  stats.rs
prepare/src/tables/: mod.rs
source/: README.md
source/examples/: 0_ccc.rs  1_decompositions.rs  2_decomposition_ccc.rs  3_multiple_starters.rs
source/src/: normalization_tests.rs  unicode.rs
source/src/properties/: canonical_combining_class.rs
tests/: Cargo.toml
tests/src/: icu.rs  lib.rs  ucd.rs
tests/src/u32/: icu.rs  mod.rs  ucd.rs
