[package]
name = "unicode_normalization_example_benches"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.5.1"
icu_normalizer = "1.4.1"

unicode_decomposing = { path = "./../decomposing/1_optimized" }

[[bench]]
name = "my"
path = "benches/my.rs"
harness = false

[[bench]]
name = "icu"
path = "benches/icu.rs"
harness = false

[profile.bench]
opt-level = 3
