[package]
name = "unicode_decomposing_tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
icu_normalizer = "1.3.2"

unicode_normalization_source = { path = "./../source" }

unicode_decomposing_v1 = { path = "./../decomposing/1_base" }
unicode_decomposing_v2 = { path = "./../decomposing/2_opt" }

[profile.test]
opt-level = 3
