[package]
name = "unicode_decomposing_tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
icu_normalizer = "1.4.1"
unicode_data = { git = "https://github.com/gpawru/unicode_data.git" }

unicode_decomposing_basic = { path = "./../decomposing/0_basic" }
unicode_decomposing = { path = "./../decomposing/1_optimized" }

[profile.test]
opt-level = 3
